2012-08-14  Charles Turner  <chturne@gmail.com>

	* Lisp2Compilation.java (rewriteBody): New method, process declare
	form.

2012-08-13  Charles Turner  <chturne@gmail.com>

	* CommonLisp.java: Add defun for internal flet rewriter.

2012-07-01  Charles Turner  <chturne@gmail.com>

	* Symbols.java (isSymbol): Fix the incorrect definition whereby a
	string was considered a symbol.

2012-07-01  Per Bothner  <per@bothner.com>

	* Lisp2.java (getNamespaceOf): Also check Declaration.IS_SYNTAX.

2012-06-04  Jamison Hope  <jrh@theptrgroup.com>

	Fixes for erroneous warnings and lookup failures.
	* defun.java (scanForDefinitions): Fix declaration lookup to
	specify function namespace.  Push newly created declaration to
	lexical bindings map.
	* defvar.java (scanForDefinitions): Likewise, but specifying value
	namespace.
	* function.java (rewriteForm): Look for an existing declaration
	when creating ReferenceExp.

2012-04-05  Per Bothner  <per@bothner.com>

	* setq.java (rewriteForm): Don't incorrect set PREFER_BINDING2.

2011-04-25  Per Bothner  <per@bothner.com>

	* Lisp2Compilation.java: Fix package to gnu.commonlisp.lang.
	* Lisp2.java (getCompilationClass): Update accordingly.

2011-03-23  Per Bothner  <per@bothner.com>

	* prog1.java (rewrite): Use letStart/letVariable/letDone methods.

2011-01-19  Per Bothner  <per@bothner.com>

	* Lisp2Compilation.java: New class.
	(emitPushBoolean): New method, moved from Lisp2.java.
	* Makefile.am: Update accordingly.
	* Lisp2.java (emitPushBoolean): Removed method.
	(getCompilationClass): New method.

2010-08-19  Per Bothner  <per@bothner.com>

	* CommonLisp.java: Update to use new Environment-setting methods.

2009-03-10  Per Bothner  <per@bothner.com>

	* Lisp2.java (createReadTable): Do setFinalColonIsKeyword()
	here, rather than in getLexer, since former was moved to ReadTable.
	(getLexer): Can now be removed.

2009-03-07  Per Bothner  <per@bothner.com>

	* Lisp2.java (getLexer): New method - call setInitialColonIsKeyword.
